# gsplat

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: generate_simple_index_pages.py
docs/source/: conf.py
examples/: __init__.py  exif.py  gsplat_viewer.py  gsplat_viewer_2dgs.py  image_fitting.py  lib_bilagrid.py  pyproject.toml  requirements.txt  simple_trainer.py  simple_trainer_2dgs.py  simple_viewer.py  simple_viewer_2dgs.py  simple_viewer_3dgut.py  utils.py
examples/benchmarks/compression/: summarize_stats.py
examples/datasets/: __init__.py  colmap.py  download_dataset.py  normalize.py  traj.py
gsplat/: __init__.py  _helper.py  color_correct.py  distributed.py  exporter.py  profile.py  relocation.py  rendering.py  utils.py  version.py
gsplat/compression/: __init__.py  png_compression.py  sort.py
gsplat/cuda/: __init__.py  _backend.py  _custom_ops.py  _lidar.py  _math.py  _torch_cameras.py  _torch_impl.py  _torch_impl_2dgs.py  _torch_impl_eval3d.py  _torch_impl_lidar.py  _torch_impl_ut.py  _torch_lidars.py  _wrapper.py  build.py
gsplat/cuda/csrc/: Adam.h
gsplat/optimizers/: __init__.py  selective_adam.py
gsplat/strategy/: __init__.py  base.py  default.py  mcmc.py  ops.py
profiling/: batch.py  main.py
tests/: _test_distributed.py  conftest.py  test_2dgs.py  test_basic.py  test_cameras.py  test_compression.py  test_custom_ops.py  test_ftheta.py  test_math.py  test_rasterization.py  test_strategy.py
