# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "torch",
    "numpy",
    "rich",
]
build-backend = "setuptools.build_meta"


[project]
name = "gsplat"
dynamic = ["version"]
description = "Python package for differentiable rasterization of gaussians"
keywords = ["gaussian", "splatting", "cuda"]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "ninja>=1.13.0,<2",
    "numpy<2.0.0",
    "jaxtyping>=0.3.9,<0.4",
    "rich>=14.3.3,<15",
    "beartype>=0.22.9,<0.23",
]

[project.optional-dependencies]
# lidar dependencies. Install with: pip install gsplat[lidar]
lidar = [
    "scipy>=1.17.1,<2",
]
# dev dependencies. Install with: pip install gsplat[dev]
dev = [
    "pyyaml>=6.0.3,<7",
    "pytest>=9.0.2,<10",
    "pytest-env>=1.6.0,<2",
    "pytest-xdist>=3.8.0,<4",
    "build>=1.4.0,<2",
    "twine>=6.2.0,<7",
    "nerfacc>=0.5.3,<0.6",
    "ruff>=0.15.7,<0.16",
    "imageio>=2.37.3,<3",
    "torchpq>=0.3.0.6,<0.4",
    "ty>=0.0.24,<0.0.25",
]



[project.urls]
Homepage = "https://github.com/nerfstudio-project/gsplat"


[tool.setuptools.dynamic]
version = {attr = "gsplat.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]


[dependency-groups]
cu130 = ["cupy-cuda13x>=13.6.0,<14"]
cu128 = ["cupy-cuda12x>=13.6.0,<14"]

# --- pixi specific ---
# NOTE: pixi is only used for managing the cuda version. Everything else is managed by uv.
[tool.pixi.workspace]
channels = ["nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gsplat = { path = "."}


# --- CUDA version features ---
# --> CUDA 12.8
[tool.pixi.feature.cu128.system-requirements]
cuda = "12.8"

[tool.pixi.feature.cu128.dependencies]
cuda-toolkit = ">=12.9.1,<13"
cuda-nvcc = ">=12.9.86,<13"
cuda-version = ">=12.9,<13"

[tool.pixi.feature.cu128.activation.env]
CUDA_HOME = "$CONDA_PREFIX"
CUDA_PATH = "$CONDA_PREFIX"

[tool.pixi.feature.cu128.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"

# --> CUDA 13.0
[tool.pixi.feature.cu130.system-requirements]
cuda = "13.0"

[tool.pixi.feature.cu130.dependencies]
cuda-version = ">=13.2,<14"
cuda-toolkit = ">=12.6.2,<13"
cuda-nvcc = ">=13.2.51,<14"

[tool.pixi.feature.cu130.activation.env]
CUDA_HOME = "$CONDA_PREFIX"
CUDA_PATH = "$CONDA_PREFIX"

[tool.pixi.feature.cu130.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]
index-strategy = "unsafe-best-match"

# --- optional training scripts ---
[tool.pixi.feature.examples.pypi-dependencies]
gsplat-examples = { path = "examples", editable = true }

# --- Environments ---
[tool.pixi.environments]
default = ["cu128", "examples", "dev"]
cu128 = ["cu128"]
cu130 = ["cu130"]
cu128-dev = ["cu128", "examples", "dev"]
cu130-dev = ["cu130", "examples", "dev"]


# --- Pixi Dependencies ---
[tool.pixi.dependencies]
cmake = ">=4.2.3,<5"
openblas = ">=0.3.31,<0.4"
uv = ">=0.11.0,<0.12"
clang-format = ">=22.1.0,<23"
python = ">=3.10,<3.14" # cupy does not support 3.14 yet


# --- Tasks ---
[tool.pixi.tasks]


# --- Formatting ---

[tool.ruff]
line-length = 80  # Must match above
src = ["gsplat", "examples", "gsplat_training_utils"] # Stop ruff from assuming any root directory is a python module


[tool.ruff.lint] # Mostly just copied over from mojo
ignore = [
  "ANN002",     # TODO: Missing type annotation for *args
  "ANN003",     # TODO: Missing type annotation for **kwargs
  "ANN204",     # TODO: Missing return type annotation for special method
  "ANN401",     # TODO: Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "B008",       # Do not perform function call in argument defaults
  "B017",       # Do not assert blind exception: `Exception`
  "B028",       # No explicit `stacklevel` keyword argument found
  "D105",       # undocumented-magic-method
  "D107",       # Missing docstring in __init__ (constructor args go in class docstring)
  "E402",       # TODO: import top of file
  "E722",       # bare except
  "E731",       # TODO: Don't assign lambda
  "E741",       # TODO: Ambiguous variable name
  "F403",       # glob imports
  "F405",       # TODO: glob imports undefined
  "F821",       # TODO: Undefined names, means script is invalid
  "F841",       # TODO: unused variables
  "FURB122",    # Questionable readability improvement
  "RUF005",     # Consider iterable unpacking instead of concatenation
  "RUF010",     # Use explicit conversion flag
  "RUF012",     # Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF015",     # Prefer `next(iter(iterable))` over single element slice
  "SIM102",     # Collapsible if
  "SIM105",     # Suppressible exception
  "SIM108",     # Use ternary operator
  "SIM114",     # Combine arms with or
  "SIM115",     # Use context manager for opening files
  "SIM117",     # Merge with statements
  "SIM300",     # YODA conditions
  "SIM905",     # Use a list literal instead of str.split
]
extend-select = [
  "ANN",        # Require function type annotations
  "B",          # Bugbear lints
  "D",          # Pydocstyle lints
  "FURB",       # Refurb lints for modernization
  "I",          # Import sorting lints
  "RUF",        # Ruff specific lints
  "SIM",        # Simplify lints
  "T10",        # Checks for the presence of debugger calls and imports.
  "UP",         # Type annotations should not use Union, Optional, etc
  "ISC",        # Good use of string concatenation
  "SIM",        # Common simplification rules
  "TID",        # Some good import practices
  "PTH",        # Use pathlib instead of os.path
  "NPY",        # Some numpy-specific things

]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"] # Docstrings aren't strictly required in test files
